Fixing api
